# punytorch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  activations.py  environment.yaml  losses.py  mnist.py  ops.py  punytorch.py  pyproject.toml  quick_test.py  tensor.py
.github/workflows/: pytest.yml
datasets/mnist/: fetch_mnist.py
examples/: gpt.py  mnist.py  pytorch_gpt.py
nn/: models.py  modules.py  optimizers.py
punytorch/: __init__.py  activations.py  helpers.py  losses.py  mlops.py  ops.py  tensor.py
punytorch/nn/: __init__.py  dropout.py  modules.py  optimizers.py
tests/: conftest.py  test_activation.py  test_attention.py  test_dropout.py  test_gradcheck.py  test_loss.py  test_mnist.py  test_nn.py  test_ops.py  test_tensor.py  test_training.py
visualization/: mnist.py
visualizations/: audit_mnist.py
