[project]
name = "punytorch"
version = "0.1.0"
description = "The newest and puniest ML framework that you definitely don't need."
authors = [
    {name = "Josh Black-Star", email = "josh@blackstar.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "numpy>=1.26.3",
    "torch==2.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "black>=23.12.1",
    "matplotlib>=3.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
)/
'''
